<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/brp_azs_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="@dimen/_285sdp"
        android:layout_height="@dimen/_180sdp"
        android:contentDescription="@string/azs"
        android:src="@drawable/ic_azs_bg"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/azs"
        android:textColor="@color/white"
        android:textSize="@dimen/_15sdp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="@+id/imageView17"
        app:layout_constraintHorizontal_bias="0.09"
        app:layout_constraintStart_toStartOf="@+id/imageView17"
        app:layout_constraintTop_toTopOf="@+id/imageView17"
        app:layout_constraintVertical_bias="0.071" />

    <ImageView
        android:id="@+id/brp_azs_close"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:contentDescription="@string/azs"
        android:src="@drawable/ic_close"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="@+id/imageView17"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toEndOf="@+id/textView20"
        app:layout_constraintTop_toTopOf="@+id/imageView17"
        app:layout_constraintVertical_bias="0.071" />

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="@dimen/_145sdp"
        android:layout_height="@dimen/_100sdp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="@+id/imageView17"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="@+id/imageView17"
        app:layout_constraintTop_toBottomOf="@+id/textView20"
        app:layout_constraintVertical_bias="0.32">

        <LinearLayout
            android:id="@+id/brp_azs_items_1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/brp_azs_ai92"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_65sdp"
                android:contentDescription="@string/azs"
                android:src="@drawable/ic_azs_ai92" />

            <ImageView
                android:id="@+id/brp_azs_ai95"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_65sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:contentDescription="@string/azs"
                android:src="@drawable/ic_azs_ai95" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/brp_azs_items_2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_55sdp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/brp_azs_ai98"
                android:paddingBottom="@dimen/_20sdp"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_65sdp"
                android:contentDescription="@string/azs"
                android:src="@drawable/ic_azs_ai98" />

            <ImageView
                android:id="@+id/brp_azs_dt"
                android:paddingBottom="@dimen/_20sdp"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_65sdp"
                android:layout_marginStart="@dimen/_15sdp"
                android:contentDescription="@string/azs"
                android:src="@drawable/ic_azs_dt" />

        </LinearLayout>

    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="@dimen/_145sdp"
        android:layout_height="@dimen/_20sdp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout4"
        app:layout_constraintStart_toStartOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4">

        <com.nvidia.devtech.CustomEditText
            android:id="@+id/brp_azs_fuel_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="@dimen/_5sdp"
            android:background="@drawable/dialog_input_bg"
            android:hint="@string/input_fuel"
            android:textColorHint="@color/white"
            android:textSize="@dimen/_7sdp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_regular"
            android:imeOptions="actionDone|flagNoExtractUi|flagNoFullscreen"
            android:inputType="number"
            android:maxLength="3"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/brp_azs_full_btn"
            android:layout_width="@dimen/_50sdp"
            android:layout_height="match_parent"
            android:background="@drawable/ss_btn_bg"
            android:text="@string/full"
            android:textSize="@dimen/_7sdp"
            android:textColor="@color/white"
            android:fontFamily="@font/roboto_regular"
            app:layout_constraintBottom_toBottomOf="@+id/brp_azs_fuel_et"
            app:layout_constraintEnd_toEndOf="@+id/brp_azs_fuel_et"
            app:layout_constraintStart_toStartOf="@+id/brp_azs_fuel_et"
            app:layout_constraintTop_toTopOf="@+id/brp_azs_fuel_et"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout7"
        android:layout_width="@dimen/_105sdp"
        android:layout_height="@dimen/_25sdp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="@+id/imageView17"
        app:layout_constraintHorizontal_bias="0.734"
        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/brp_azs_close"
        app:layout_constraintVertical_bias="0.251">

        <ImageView
            android:id="@+id/imageView19"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:src="@drawable/ic_canister"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView21"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/max_fuel_in_vehicle"
            android:textColor="#69809B"
            android:textSize="@dimen/_6sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.3"
            app:layout_constraintStart_toEndOf="@+id/imageView19"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/brp_azs_max_fuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="0 L"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView21"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView21"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout8"
        android:layout_width="@dimen/_105sdp"
        android:layout_height="@dimen/_20sdp"
        android:background="@drawable/azs_fuel_bg"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="@+id/imageView17"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout7"
        app:layout_constraintVertical_bias="0.113">

        <TextView
            android:id="@+id/textView22"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="Автомобиль будет \nзаправлен на:"
            android:textColor="@color/white"
            android:textSize="@dimen/_6sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/brp_azs_do_fuel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="0 L"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView22"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout9"
        android:layout_width="@dimen/_105sdp"
        android:layout_height="@dimen/_25sdp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="@+id/imageView17"
        app:layout_constraintHorizontal_bias="0.697"
        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout8"
        app:layout_constraintVertical_bias="0.15">

        <TextView
            android:id="@+id/textView23"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/azs_releaze_price"
            android:textColor="#69809B"
            android:textSize="@dimen/_6sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/brp_azs_fuel_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:text="0 RUB"
            android:textColor="@color/white"
            android:textSize="@dimen/_15sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView23"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/textView23"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/brp_azs_start_btn"
        android:layout_width="@dimen/_105sdp"
        android:layout_height="@dimen/_20sdp"
        android:background="@drawable/azs_start_btn_bg"
        android:text="НАЧАТЬ ЗАПРАВКУ"
        android:textColor="@color/white"
        android:textSize="@dimen/_6sdp"
        android:fontFamily="@font/roboto_bold"
        android:elevation="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintEnd_toEndOf="@+id/imageView17"
        app:layout_constraintHorizontal_bias="0.72"
        app:layout_constraintStart_toEndOf="@+id/linearLayout4"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout9"
        app:layout_constraintVertical_bias="0.55" />

</androidx.constraintlayout.widget.ConstraintLayout>