<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:custom="http://schemas.android.com/apk/res-auto"

    android:id="@+id/speedometer"

    android:layout_gravity="center|bottom"

    android:paddingTop="@dimen/_10sdp"

    android:layout_width="match_parent"
    android:layout_height="@dimen/_107sdp">

    <!--// Speed BG //-->
    <ImageView
        android:id="@+id/speed_bg"
        android:background="@drawable/speed_bg"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_11sdp"

        android:layout_width="@dimen/_89sdp"
        android:layout_height="@dimen/_81sdp" />

    <ImageView
        android:id="@+id/speed_arrow"
        android:layout_width="@dimen/_89sdp"

        android:layout_height="@dimen/_81sdp"
        android:layout_centerHorizontal="true"

        android:layout_marginTop="@dimen/_11sdp"
        android:background="@drawable/arrow"
        android:rotation="-122" />

    <!--// Speed text //-->
    <TextView
        android:id="@+id/speed_text"

        android:shadowColor="@color/progress_gray_dark"
        android:shadowDx="1"
        android:shadowDy="1.5"
        android:shadowRadius="15"

        android:text="@string/speed_default_text"
        android:textColor="@color/white"
        android:textSize="@dimen/_19sdp"
        android:fontFamily="@font/montserrat_bolditalic"

        android:gravity="center"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_32sdp"

        android:layout_width="@dimen/_53sdp"
        android:layout_height="wrap_content" />

    <!--// Speed line //-->
    <com.triggertrap.seekarc.SeekArc
        android:id="@+id/speed_line"

        android:layout_width="@dimen/_107sdp"
        android:layout_height="@dimen/_84sdp"

        android:padding="@dimen/_7sdp"

        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_11sdp"

        custom:enabled="false"
        custom:progressWidth="@dimen/_2sdp"
        custom:arcColor="@color/transparent"
        custom:progressColor="@color/speed"
        custom:max="260"
        custom:progress="240"
        custom:rotation="180"
        custom:startAngle="60"
        custom:sweepAngle="240"
        custom:touchInside="true" />

    <!--// Mileage text & bg //-->
    <TextView
        android:id="@+id/speed_mileage_text"

        android:text="@string/mileage_default_text"
        android:textColor="@color/white"
        android:textSize="@dimen/_6sdp"
        android:fontFamily="@font/montserrat_regular"
        android:letterSpacing="0.3"

        android:background="@drawable/mileage_bg"

        android:layout_centerHorizontal="true"
        android:gravity="center"

        android:layout_marginTop="@dimen/_66sdp"

        android:layout_width="@dimen/_40sdp"
        android:layout_height="@dimen/_9sdp"

        tools:ignore="SmallSp" />

    <!--// Status bar //-->
    <LinearLayout
        android:id="@+id/speed_status_bar"

        android:background="@drawable/speedometer_status_bg"
        android:orientation="horizontal"

        android:layout_centerHorizontal="true"

        android:layout_marginTop="@dimen/_79sdp"

        android:layout_width="@dimen/_65sdp"
        android:layout_height="@dimen/_13sdp">

        <ImageView
            android:id="@+id/speed_engine_ico"
            android:layout_marginLeft="@dimen/_6sdp"
            android:layout_gravity="center_vertical"

            android:background="@drawable/ico_engine_off"

            android:layout_width="@dimen/_7sdp"
            android:layout_height="@dimen/_7sdp" />

        <ImageView
            android:id="@+id/speed_light_ico"
            android:layout_marginLeft="@dimen/_6sdp"
            android:layout_gravity="center_vertical"

            android:background="@drawable/ico_lights_off"

            android:layout_width="@dimen/_7sdp"
            android:layout_height="@dimen/_7sdp" />

        <ImageView
            android:id="@+id/speed_belt_ico"
            android:layout_marginLeft="@dimen/_7sdp"
            android:layout_gravity="center_vertical"

            android:background="@drawable/ico_seatbelt_off"

            android:layout_width="@dimen/_7sdp"
            android:layout_height="@dimen/_7sdp" />

        <ImageView
            android:id="@+id/speed_lock_ico"
            android:layout_marginLeft="@dimen/_7sdp"
            android:layout_gravity="center_vertical"

            android:background="@drawable/ico_lock_off"

            android:layout_width="@dimen/_7sdp"
            android:layout_height="@dimen/_7sdp" />

    </LinearLayout>

    <!--// Fuel icon & text //-->
    <LinearLayout
        android:id="@+id/speed_fuel"
        android:orientation="vertical"

        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/_11sdp"
        android:layout_toLeftOf="@id/speed_bg"

        android:layout_width="@dimen/_14sdp"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/speed_fuel_icon"
            android:src="@drawable/ico_petrol"
            android:layout_gravity="center"
            android:layout_width="@dimen/_9sdp"
            android:layout_height="@dimen/_13sdp" />

        <TextView
            android:id="@+id/speed_fuel_text"
            android:text="@string/fuel_default_text"
            android:textSize="@dimen/_5sdp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_medium"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <!--// Fuel line //-->
    <com.triggertrap.seekarc.SeekArc
        android:id="@+id/speed_fuel_line"
        android:layout_width="@dimen/_92sdp"
        android:layout_height="@dimen/_107sdp"

        android:layout_toLeftOf="@id/speed_car_hp"
        android:layout_marginTop="@dimen/_8sdp"

        custom:arcColor="#80000000"
        custom:arcWidth="@dimen/_2sdp"
        custom:enabled="false"
        custom:progress="50"
        custom:progressColor="@color/fuel_line"
        custom:progressWidth="@dimen/_2sdp"
        custom:rotation="200"
        custom:startAngle="38"
        custom:sweepAngle="80"
        custom:touchInside="true" />

    <!--// Car HP icon & text //-->
    <LinearLayout
        android:id="@+id/speed_car_hp"
        android:orientation="vertical"

        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/_11sdp"
        android:layout_toRightOf="@id/speed_bg"

        android:layout_width="@dimen/_14sdp"
        android:layout_height="@dimen/_16sdp">

        <ImageView
            android:background="@drawable/ico_wrench"
            android:layout_gravity="center"
            android:layout_width="@dimen/_9sdp"
            android:layout_height="@dimen/_9sdp" />

        <TextView
            android:id="@+id/speed_car_hp_text"
            android:text="50 %"
            android:textSize="@dimen/_5sdp"
            android:textColor="@color/white"
            android:fontFamily="@font/montserrat_medium"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/_1sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:ignore="SmallSp" />

    </LinearLayout>

    <!--// Car HP line //-->
    <com.triggertrap.seekarc.SeekArc
        android:id="@+id/speed_car_hp_line"
        android:layout_width="@dimen/_92sdp"
        android:layout_height="@dimen/_107sdp"

        android:rotationY="180"

        android:layout_toRightOf="@id/speed_fuel"

        android:layout_marginTop="@dimen/_8sdp"

        custom:arcColor="#80000000"
        custom:arcWidth="@dimen/_2sdp"
        custom:enabled="false"
        custom:progress="50"
        custom:progressColor="@color/car_hp_line"
        custom:progressWidth="@dimen/_2sdp"
        custom:rotation="200"
        custom:startAngle="38"
        custom:sweepAngle="80"
        custom:touchInside="true" />

</RelativeLayout>